# raster-impress

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: raster-impress.1
raster_impress/: __init__.py  cli.py  extractor.py  helper.py  raster_analysis.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_helpers.py  test_raster_analysis.py
