[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raster_impress"
version = "0.2.0"
description = "Raster analysis CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rasterio",
    "numpy",
    "matplotlib",
    "rasterstats",
    "scipy",
    "shapely",
    "fiona",
]

[project.scripts]
raster-impress = "raster_impress.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["raster_impress*"]
